src/script/snapshots/packhub__script__apt__tests__script_generation_apt-2.snap
---
source: src/script/apt.rs
expression: apt_script_unstable
---
#!/bin/sh

echo "Welcome to package key and repository setup script for OpenBangla-Keyboard"
echo "This script will add the repository key and repository to your system."
echo "Please make sure you have sudo access to run this script."
echo
echo "Downloading and installing the repository key..."
wget -qO- http://localhost:3000/v1/keys/packhub.gpg | sudo tee /etc/apt/keyrings/packhub.gpg > /dev/null
echo
echo "Adding the repository to your system..."
echo "deb [signed-by=/etc/apt/keyrings/packhub.gpg] http://localhost:3000/v1/apt/ubuntu/github/OpenBangla/OpenBangla-Keyboard unstable main" | sudo tee /etc/apt/sources.list.d/OpenBangla-Keyboard.list > /dev/null
echo 
echo "Updating package lists..."
sudo apt-get update
